yair-io/tests/lit/mod/missing_module_name.ya
// RUN: @yair_as @file -o "@first_tempfile" --color never 2>&1 || echo 0

// CHECK: error: Unexpected end of file
mod
